[gd_scene load_steps=2 format=3 uid="uid://bqp3f5t8xnvsd"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.03, 0.08, 1)

[node name="VignetteOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.1, 0.1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 72
text = "MOUNTAIN KNIGHT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "A Souls-like Rogue-like Adventure"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NewGameButton" type="Button" parent="CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "NEW GAME"

[node name="ContinueButton" type="Button" parent="CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "CONTINUE"

[node name="CoopButton" type="Button" parent="CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "LAN CO-OP"

[node name="SettingsButton" type="Button" parent="CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "QUIT"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -30.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "v0.1.0"
horizontal_alignment = 2
